@@ -1,4 +1,4 @@
-V4L_UTILS_VERSION=0.8.2
+V4L_UTILS_VERSION=0.8.3
 
 # These ones can be overriden from the cmdline
 
