@@ -422,7 +422,6 @@ static int build_huffman_table(struct jdec_private *priv, const unsigned char *b
 	unsigned int i, j, code, code_size, val, nbits;
 	unsigned char huffsize[257], *hz;
 	unsigned int huffcode[257], *hc;
-	int next_free_entry;
 	int slowtable_used[16 - HUFFMAN_HASH_NBITS];
 
 	/*
@@ -459,7 +458,6 @@ static int build_huffman_table(struct jdec_private *priv, const unsigned char *b
 	/*
 	 * Build the lookup table, and the slowtable if needed.
 	 */
-	next_free_entry = -1;
 	for (i = 0; huffsize[i]; i++) {
 		val = vals[i];
 		code = huffcode[i];
@@ -1543,8 +1541,8 @@ static void decode_MCU_1x2_1plane(struct jdec_private *priv)
 
 static void print_SOF(const unsigned char *stream)
 {
-	int width, height, nr_components, precision;
 #if DEBUG
+	int width, height, nr_components, precision;
 	const char *nr_components_to_string[] = {
 		"????",
 		"Grayscale",
@@ -1552,7 +1550,6 @@ static void print_SOF(const unsigned char *stream)
 		"YCbCr",
 		"CYMK"
 	};
-#endif
 
 	precision = stream[2];
 	height = be16_to_cpu(stream + 3);
@@ -1564,6 +1561,7 @@ static void print_SOF(const unsigned char *stream)
 			width, height,
 			nr_components, nr_components_to_string[nr_components],
 			precision);
+#endif
 }
 
 /*******************************************************************************
